--- a/main.css
+++ b/main.css
@@ -1,7 +1,3 @@
-
-
-/*# sourceMappingURL=main.css.map */
-
 body {
     background-image: url("image4.jpeg");
     background-repeat: no-repeat;
@@ -25,6 +21,25 @@ h1, p {
 
     .header h1 {
         padding-top: 40px;
+    }
+
+.navbar {
+    overflow: hidden;
+    background-color: rgba(60, 80, 93, 0.2);
+}
+
+    .navbar a {
+        float: left;
+        display: block;
+        color: gray;
+        text-align: center;
+        padding: 10px 20px;
+        text-decoration: none;
+    }
+
+    .navbar a:hover {
+        background-color: rgb(60, 80, 93);
+        color: white;
     }
 
 .sticky {
