--- a/input.scss
+++ b/input.scss
@@ -13,9 +13,12 @@ body {
     h1 {padding-top: 40px;}
     
 }
-div row2 {
-    font-size: 18px;
-        h2, p {
+.row2 {
+    font-size: 20px;
+        h2 {
     color: white;
-   }
+        }
+        p{
+        color:white
+        }
 }
