--- a/main.css
+++ b/main.css
@@ -47,6 +47,9 @@ h1, p {
     text-align: center;
     text-decoration: none;
 }
+.table-responsive {
+    padding-top:20px;
+}
 
 .row {
     background-color: white;
@@ -58,4 +61,33 @@ h1, p {
     background-color: rgb(60, 80, 93);
     margin: 10px 0px 0px 0px;
     padding: 30px 20px 30px 20px;
+}
+.project {
+    opacity: 1;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    padding: 10px 0px 10px 0px;
+}
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+.thumbnail:hover .project {
+    opacity: 0.3;
+}
+.thumbnail:hover .middle {
+    opacity: 1;
+}
+.text {
+    background-color: rgb(60, 80, 93);
+    color: white;
+    font-size: 16px;
+    padding: 10px 15px;
 }
