--- a/templates/projects.html
+++ b/templates/projects.html
@@ -80,7 +80,7 @@
           <div class="col-md-3">
             <div class="thumbnail">
               <img
-                src="image5.jpeg"
+                src="../static/image5.jpeg"
                 alt="Blue sea"
                 class="project"
                 style="width: 100%;"
@@ -93,7 +93,7 @@
           <div class="col-md-3">
             <div class="thumbnail">
               <img
-                src="image5.jpeg"
+                src="../static/image5.jpeg"
                 alt="Blue sea"
                 class="project"
                 style="width: 100%;"
@@ -106,7 +106,7 @@
           <div class="col-md-3">
             <div class="thumbnail">
               <img
-                src="image5.jpeg"
+                src="../static/image5.jpeg"
                 alt="Blue sea"
                 class="project"
                 style="width: 100%;"
@@ -119,7 +119,7 @@
           <div class="col-md-3">
             <div class="thumbnail">
               <img
-                src="image5.jpeg"
+                src="../static/image5.jpeg"
                 alt="Blue sea"
                 class="project"
                 style="width: 100%;"
